listas varias funcionalidades, citas-editar-falta

--- a/src/app/private/pages/cambiar-password/cambiar-password.page.html
+++ b/src/app/private/pages/cambiar-password/cambiar-password.page.html
@@ -1,88 +1,162 @@
 <app-navbar [NameRoute]="'Cambiar contraseña'" [href]="'/profile'" />
 
 <ion-content [fullscreen]="true">
-    <ion-card class="mi-tarjeta">
-        <ion-grid class="ion-padding">
+  <ion-card class="mi-tarjeta">
+    <ion-grid class="ion-padding">
+      <ion-row>
+        <ion-card-content class="contenido">
+          <img
+            class="foto-perfil"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Spider-Man.jpg/1200px-Spider-Man.jpg"
+          />
+          <ion-label class="correo">correo@example.com</ion-label>
+        </ion-card-content>
+      </ion-row>
+      <ion-row>
+        <ion-col size="12">
+          <form
+            [formGroup]="FormCambioPass"
+            (submit)="ChangePassword(FormCambioPass.value)"
+          >
+            <ion-list>
+              <ion-item>
+                <ion-label position="stacked">Password actual</ion-label>
+
+                <ion-input
+                  [type]="isSeePassword?'text':'password'"
+                  formControlName="passwordactual"
+                ></ion-input>
+                <ion-icon
+                [name]="isSeePassword?'eye-outline':'eye-off-outline'"
+                slot="end"
+                (click)="seePassword()"
+              ></ion-icon>
+              </ion-item>
+
+              <div
+                *ngIf="FormCambioPass.get('passwordactual')?.invalid && FormCambioPass.get('passwordactual')?.touched"
+              >
+                <span
+                  *ngIf="FormCambioPass.get('passwordactual')?.hasError('required')"
+                  style="color: red"
+                >
+                  Campo requerido.</span
+                >
+              </div>
+              <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
+              <div
+                *ngIf="FormCambioPass.get('passwordactual')?.hasError('minlength')"
+                style="color: red"
+              >
+                Nesecitas 5 Caracteres como Mínimo.
+              </div>
+              <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
+              <div
+                *ngIf="FormCambioPass.get('passwordactual')?.hasError('maxlength')"
+                style="color: red"
+              >
+                10 Caracteres como Máximo.
+              </div>
+
+              <ion-item>
+                <ion-label position="stacked">Password nueva</ion-label>
+                <ion-input
+                [type]="isSeePasswordnewPassword?'text':'password'"
+
+                  formControlName="passwordnueva"
+                ></ion-input>
+                <ion-icon
+                [name]="isSeePasswordnewPassword?'eye-outline':'eye-off-outline'"
+                slot="end"
+                (click)="seePassword2()"
+              ></ion-icon>
+              </ion-item>
+              <div
+                *ngIf="FormCambioPass.get('passwordnueva')?.invalid && FormCambioPass.get('passwordnueva')?.touched"
+              >
+                <span
+                  *ngIf="FormCambioPass.get('passwordnueva')?.hasError('required')"
+                  style="color: red"
+                >
+                  Campo requerido.</span
+                >
+              </div>
+
+              <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
+              <div
+                *ngIf="FormCambioPass.get('passwordnueva')?.hasError('minlength')"
+                style="color: red"
+              >
+                Nesecitas 5 Caracteres como Mínimo.
+              </div>
+              <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
+              <div
+                *ngIf="FormCambioPass.get('passwordnueva')?.hasError('maxlength')"
+                style="color: red"
+              >
+                10 Caracteres como Máximo.
+              </div>
+
+              <ion-item>
+                <ion-label position="stacked">Confirmar Password</ion-label>
+                <ion-input
+                [type]="isSeePasswordConfirmationPassword?'text':'password'"
+                  formControlName="confirmarpassword"
+                ></ion-input>
+                <ion-icon
+                [name]="isSeePasswordConfirmationPassword?'eye-outline':'eye-off-outline'"
+                slot="end"
+                (click)="seePassword3()"
+              ></ion-icon>
+              </ion-item>
+              <div
+                *ngIf="FormCambioPass.get('confirmarpassword')?.invalid && FormCambioPass.get('confirmarpassword')?.touched"
+              >
+                <span
+                  *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('required')"
+                  style="color: red"
+                >
+                  Campo requerido.</span
+                >
+              </div>
+              <div
+                *ngIf="FormCambioPass.get('confirmarpassword')?.touched && FormCambioPass.get('passwordnueva')?.touched"
+              >
+                <span
+                  *ngIf="FormCambioPass.get('confirmarpassword')?.value != FormCambioPass.get('passwordnueva')?.value"
+                  style="color: red"
+                >
+                  Contraseña deben de coincidir.</span
+                >
+              </div>
+              <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
+              <div
+                *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('minlength')"
+                style="color: red"
+              >
+                Nesecitas 5 Caracteres como Mínimo.
+              </div>
+              <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
+              <div
+                *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('maxlength')"
+                style="color: red"
+              >
+                10 Caracteres como Máximo.
+              </div>
+            </ion-list>
             <ion-row>
-
-                <ion-card-content class="contenido">
-                    <img class="foto-perfil" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Spider-Man.jpg/1200px-Spider-Man.jpg" />
-                    <ion-label class="correo">correo@example.com</ion-label>
-                </ion-card-content>
+              <ion-col>
+                <ion-button
+                  type="submit"
+                  expand="block"
+                  [disabled]="FormCambioPass.get('confirmarpassword')?.value !== FormCambioPass.get('passwordnueva')?.value  ||FormCambioPass.invalid "
+                  >Guardar</ion-button
+                >
+              </ion-col>
             </ion-row>
-            <ion-row>
-                <ion-col size="12">
-
-                    <form [formGroup]="FormCambioPass" (submit)="ChangePassword()">
-                        <ion-list>
-                            <ion-item>
-                                <ion-label position="stacked">Password actual</ion-label>
-                                <ion-input type="password" formControlName="passwordactual"></ion-input>
-
-                            </ion-item>
-                            <div *ngIf="FormCambioPass.get('passwordactual')?.invalid && FormCambioPass.get('passwordactual')?.touched">
-                                <span *ngIf="FormCambioPass.get('passwordactual')?.hasError('required')" style="color: red;"> Campo requerido.</span>
-                            </div>
-                            <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
-                            <div *ngIf="FormCambioPass.get('passwordactual')?.hasError('minlength')" style="color: red;">
-                                Nesecitas 5 Caracteres como Mínimo.
-                            </div>
-                            <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
-                            <div *ngIf="FormCambioPass.get('passwordactual')?.hasError('maxlength')" style="color: red;">
-                                10 Caracteres como Máximo.
-                            </div>
-
-
-                            <ion-item>
-                                <ion-label position="stacked">Password nueva</ion-label>
-                                <ion-input type="password" formControlName="passwordnueva"></ion-input>
-                            </ion-item>
-                            <div *ngIf="FormCambioPass.get('passwordnueva')?.invalid && FormCambioPass.get('passwordnueva')?.touched">
-                                <span *ngIf="FormCambioPass.get('passwordnueva')?.hasError('required')" style="color: red;"> Campo requerido.</span>
-                            </div>
-
-                            <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
-                            <div *ngIf="FormCambioPass.get('passwordnueva')?.hasError('minlength')" style="color: red;">
-                                Nesecitas 5 Caracteres como Mínimo.
-                            </div>
-                            <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
-                            <div *ngIf="FormCambioPass.get('passwordnueva')?.hasError('maxlength')" style="color: red;">
-                                10 Caracteres como Máximo.
-                            </div>
-
-                            <ion-item>
-                                <ion-label position="stacked">Confirmar Password</ion-label>
-                                <ion-input type="password" formControlName="confirmarpassword"></ion-input>
-                            </ion-item>
-                            <div *ngIf="FormCambioPass.get('confirmarpassword')?.invalid && FormCambioPass.get('confirmarpassword')?.touched">
-                                <span *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('required')" style="color: red;"> Campo requerido.</span>
-                            </div>
-                            <div *ngIf="FormCambioPass.get('confirmarpassword')?.touched && FormCambioPass.get('passwordnueva')?.touched">
-                                <span *ngIf="FormCambioPass.get('confirmarpassword')?.value != FormCambioPass.get('passwordnueva')?.value" style="color: red;"> Contraseña deben de coincidir.</span>
-                            </div>
-                            <!-- Validación en caso que el usuario ingrese menor de 5 caracteres -->
-                            <div *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('minlength')" style="color: red;">
-                                Nesecitas 5 Caracteres como Mínimo.
-                            </div>
-                            <!-- Validación en caso que el usuario ingreso mayor a 10 de caracteres -->
-                            <div *ngIf="FormCambioPass.get('confirmarpassword')?.hasError('maxlength')" style="color: red;">
-                                10 Caracteres como Máximo.
-                            </div>
-
-
-
-                        </ion-list>
-                        <ion-row>
-
-                            <ion-col>
-                                <ion-button type="submit" expand="block" [disabled]="FormCambioPass.get('confirmarpassword')?.value !== FormCambioPass.get('passwordnueva')?.value  ||FormCambioPass.invalid ">Guardar</ion-button>
-                            </ion-col>
-                        </ion-row>
-                    </form>
-
-
-                </ion-col>
-            </ion-row>
-        </ion-grid>
-    </ion-card>
+          </form>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-card>
 </ion-content>
