--- a/src/app/private/pages/dudas/components/card-reply-duda/card-reply-duda.component.html
+++ b/src/app/private/pages/dudas/components/card-reply-duda/card-reply-duda.component.html
@@ -1,5 +1,5 @@
 <div class="ion-padding" *ngIf="duda">
-  <div class="flex-warp" [routerLink]="['/profile']" routerLinkActive="router-link-active" >
+  <div class="flex-warp" >
     <img class="rounded" alt="user" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
     <h3>{{duda?.usuario?.nombre|titlecase}}</h3>
   </div>
