--- a/src/app/private/pages/buscar/buscar.page.html
+++ b/src/app/private/pages/buscar/buscar.page.html
@@ -7,25 +7,25 @@
     <ion-searchbar [(ngModel)]="searchTerm" placeholder="Buscar" show-clear-button="always" clear-icon="trash-bin"></ion-searchbar>
 
 
-    <ion-item>
+    <ion-item *ngIf="especialidades|async as especialidades">
         <ion-label>Especialidad</ion-label>
         <ion-select [(ngModel)]="specialtyFilter">
             <ion-select-option value="">Todas</ion-select-option>
-            <ion-select-option *ngFor="let item of items" [value]="item.specialty">{{ item.specialty }}</ion-select-option>
+            <ion-select-option *ngFor="let item of especialidades" [value]="item.nombre">{{ item.nombre|titlecase }}</ion-select-option>
         </ion-select>
     </ion-item>
 
-    <ion-list>
+    <ion-list >
         <ion-item *ngFor="let item of filteredItems">
-            <ion-card [routerLink]="['/profile-medico']"  >
+            <ion-card [routerLink]="['/profile-medico/',item.id]"  >
                 <ion-card-content>
                     <div class="card-content">
                         <ion-thumbnail class="avatar">
                             <img src="../../../../assets/img/ante-detalles.png" alt="Avatar">
                         </ion-thumbnail>
                         <div class="info">
-                            <h2>{{ item.name }}</h2>
-                            <p>{{ item.specialty }}</p>
+                            <h2>{{ item.usuario.nombre|titlecase }} {{item.usuario.apellido|titlecase}}</h2>
+                            <p>{{ item.especialidad.nombre|titlecase }} - {{item.usuario.datos_personale.ci}}</p>
                         </div>
                     </div>
                 </ion-card-content>
