--- a/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.html
+++ b/src/app/private/pages/citas-medicas/components/card-citas/card-citas.component.html
@@ -1,5 +1,5 @@
-<div [routerLink]="['/cita-medicas-detalle']">
-  <ion-img class="icon-img" src="../../../../assets/img/cita-medica.png"></ion-img>
-  <ion-label class="label-titulo" color="tertiary">Titulo</ion-label>
-  <ion-badge class="label-fecha-final" color="success">Finaliza: 12/01/2020</ion-badge>
+<div [routerLink]="['/cita-medicas-detalle/'+cita.id]" *ngIf="cita?.estado==1">
+    <ion-img class="icon-img" src="../../../../assets/img/cita-medica.png"></ion-img>
+    <ion-label class="label-titulo" color="tertiary"> {{cita.titulo}} </ion-label>
+    <ion-badge class="label-fecha-final" color="success">Finaliza: {{cita.fecha|date}} </ion-badge>
 </div>
